Added event optimizer

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 fieldextractor/fieldextractor
-fieldextracto2/fieldextracto2
+fieldextractor2/fieldextractor2
 tcpinput/tcpinput
+tcpinput2/tcpinput2
