Catching cases when there are no regexes

--- a/tcpinput2/Dockerfile
+++ b/tcpinput2/Dockerfile
@@ -1,5 +1,5 @@
 FROM golang:1.9.2
 WORKDIR /tmp/tcpinput2
-COPY fetch_unconfirmed_transactions.go .
+COPY tcpinput2.go .
 RUN go build -o tcpinput2 tcpinput2.go
 CMD ["./tcpinput2"]
