initial commit for stream based parser

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ fieldextractor/fieldextractor
 fieldextractor2/fieldextractor2
 tcpinput/tcpinput
 tcpinput2/tcpinput2
+tcpinput3/tcpinput3
+tcpinput4/tcpinput4
